fix: allow overflow in both x and y in tips block

--- a/frontend/app/view/quicktipsview/quicktipsview.less
+++ b/frontend/app/view/quicktipsview/quicktipsview.less
@@ -3,5 +3,5 @@
 
 .quicktips-view {
     padding: 10px 2px;
-    overflow-y: auto;
+    overflow: auto;
 }
